--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"react-dom": "^17.0.2",
 		"react-scripts": "4.0.3",
 		"react-scroll": "^1.8.2",
+		"react-swipeable-views": "^0.13.9",
 		"web-vitals": "^1.1.1"
 	},
 	"scripts": {
